# big-coin

./: .gitattributes  .gitignore  ADDRESS_SYNC_FIX.md  ADDRESS_SYNC_GUIDE.txt  CLEAN_RESTART.bat  COMPLETION_SUMMARY.md  CREATE_SHORTCUT.vbs  FIX_STATUS.md  FLUTTER_BUILD_SUMMARY.txt  FLUTTER_QUICK_START.md  FULL_AUTO_RESTART.ps1  LAUNCH_EVERYTHING.bat  LAUNCH_FIXED.bat  LAUNCH_GUI.bat  LAUNCH_NOW.txt  MINING_ERROR_SOLUTION.md  MINING_FIX.txt  P2P_IMPLEMENTATION_COMPLETE.txt  P2P_NETWORK_README.md  P2P_SETUP_GUIDE.md  P2P_START_HERE.txt  PRODUCTION_LAUNCH_PLAN.md  QUICK_START_SHARED.md  README.md  README_MOBILE.md  RESTART.bat  RESTART_NOW.txt  SECURITY.md  SHARED_STATE_SETUP.md  START_HERE.txt  START_MINING_NOW.bat  START_NODE_NETWORK.bat  START_WEB_DASHBOARD.bat  START_WORKING.bat  SYNC_SOLUTION.txt  WEB_ONLY_SETUP.md  block.py  calc.py  cli.py  connect_nodes.py  (+33 more)
deploy/: LAUNCH_CHECKLIST.md  README.md  RUNBOOK.md  bigcoin.conf  bigcoind.service  setup-dashboard.sh  setup-https.sh  setup-seednode.sh
docs/: EXCHANGE_LISTING.md  MINING.md  NODE_SETUP.md  README.md  WALLET.md
explorer/: .env.example  .gitignore  Procfile  README.md  api.py  app.py  config.py  demo_data.py  railway.json  requirements.txt  rpc.py  rpc_readonly_proxy.py  webhooks.py
miner/: README.md  START_MINING.bat  moonbite_miner.py  start-mining.sh
mobile/: README.md  pubspec.yaml
release/: README.md  SHA256SUMS.txt  bigcoin.conf.example  moonbite.conf.example
static/: style.css
templates/: explorer.html  index.html  mining.html  wallet.html
tests/: test_attacks.py  test_block.py  (+14 more)
(+58 files in other folders)
